RenderBlock hit testing should ignore PseudoElements https://bugs.webkit.org/show_bug.cgi?id=105545

Reviewed by Eric Seidel.

Source/WebCore:

Use nonPseudoNode() in hit testing code in RenderBlock and RenderBox so
that when clicking on the box generated by a pseudo element we never
generate a Position for the PseudoElement, but instead for the
generating node.

Test: fast/css-generated-content/block-and-box-hit-testing.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::positionForBox):
(WebCore::isEditingBoundary):
(WebCore::positionForPointRespectingEditingBoundaries):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::positionForPoint):

LayoutTests:

Add test for hit testing on pseudo element generated blocks and boxes.

* fast/css-generated-content/block-and-box-hit-testing-expected.txt: Added.
* fast/css-generated-content/block-and-box-hit-testing.html: Added.


Canonical link: https://commits.webkit.org/123803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138317 268f45cc-cd09-0410-ab3c-d52691b4dbfc